--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,109 +1,105 @@
-
-
-
-
-
-
-
-
-
-<div th:fragment="sidebar" class="sidebar d-flex flex-column p-3 bg-blue text-black" id="sidebar">
-    <div class="sidebar-header mb-4 text-center">
-        <img th:src="@{/images/acv-logo2.png}" alt="ACV Logo" style="max-width: 50px; height: auto;">
+<div th:fragment="sidebar" class="sidebar d-flex flex-column p-3 bg-white text-black" id="sidebar">
+    <div class="sidebar-header d-flex align-items-center gap-3 px-2 mb-4">
+        <img th:src="@{/images/acv-logo2.png}" alt="ACV Logo" style="width: 45px; height: 45px;">
+        <div class="text-start lh-sm">
+            <div class="fw-bold" style="font-size: 16px;">ACV Store</div>
+            <div class="text-muted" style="font-size: 13px;">Cửa hàng bán áo</div>
+        </div>
     </div>
+
     <button class="toggle-btn" id="toggleBtn">
         <i class="fas fa-bars" id="toggleIcon"></i>
     </button>
     <div class="nav-container flex-grow-1">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a th:href="@{/acvstore/thong-ke}" class="nav-link text-white d-flex align-items-center">
+                <a th:href="@{/acvstore/thong-ke}" class="nav-link text-black d-flex align-items-center">
                     <i class="fa-solid fa-chart-line"></i>
                     <span class="nav-text">Thống kê</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a th:href="@{/acvstore/ban-hang}" class="nav-link text-white d-flex align-items-center">
+                <a th:href="@{/acvstore/ban-hang}" class="nav-link text-black d-flex align-items-center">
                     <i class="fa-solid fa-cash-register"></i>
                     <span class="nav-text">Bán hàng tại quầy</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a th:href="@{/acvstore/hoa-don}" class="nav-link text-white d-flex align-items-center">
+                <a th:href="@{/acvstore/hoa-don}" class="nav-link text-black d-flex align-items-center">
                     <i class="fa-solid fa-file-invoice"></i>
                     <span class="nav-text">Hóa đơn</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white d-flex justify-content-between align-items-center collapsed" data-bs-toggle="collapse" href="#sanphamSubmenu" role="button" aria-expanded="false" aria-controls="sanphamSubmenu">
+                <a class="nav-link text-black d-flex justify-content-between align-items-center collapsed" data-bs-toggle="collapse" href="#sanphamSubmenu" role="button" aria-expanded="false" aria-controls="sanphamSubmenu">
                     <span class="d-flex align-items-center"><i class="fa-solid fa-box-open"></i><span class="nav-text">Sản phẩm</span></span>
                     <i class="fa-solid fa-chevron-down toggle-icon"></i>
                 </a>
                 <div class="collapse" id="sanphamSubmenu">
                     <ul class="nav flex-column ms-3">
                         <li class="nav-item">
-                            <a th:href="@{/acvstore/san-pham}" class="nav-link text-white">
+                            <a th:href="@{/acvstore/san-pham}" class="nav-link text-black">
                                 <i class="fa-solid fa-list-check"></i>
                                 <span class="nav-text">Danh sách sản phẩm</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white d-flex justify-content-between align-items-center collapsed" data-bs-toggle="collapse" href="#thuocTinhSubmenu" role="button" aria-expanded="false" aria-controls="thuocTinhSubmenu">
+                            <a class="nav-link text-black d-flex justify-content-between align-items-center collapsed" data-bs-toggle="collapse" href="#thuocTinhSubmenu" role="button" aria-expanded="false" aria-controls="thuocTinhSubmenu">
                                 <span class="d-flex align-items-center"><i class="fa-solid fa-tags"></i><span class="nav-text">Thuộc tính sản phẩm</span></span>
                                 <i class="fa-solid fa-chevron-down toggle-icon"></i>
                             </a>
                             <div class="collapse" id="thuocTinhSubmenu">
                                 <ul class="nav flex-column ms-3">
                                     <li class="nav-item">
-                                        <a th:href="@{/acvstore/xuat-xu}" class="nav-link text-white">
+                                        <a th:href="@{/acvstore/xuat-xu}" class="nav-link text-black">
                                             <i class="fa-solid fa-globe"></i>
                                             <span class="nav-text">Xuất xứ</span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a th:href="@{/acvstore/mau-sac}" class="nav-link text-white">
+                                        <a th:href="@{/acvstore/mau-sac}" class="nav-link text-black">
                                             <i class="fa-solid fa-palette"></i>
                                             <span class="nav-text">Màu sắc</span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a th:href="@{/acvstore/kich-co}" class="nav-link text-white">
+                                        <a th:href="@{/acvstore/kich-co}" class="nav-link text-black">
                                             <i class="fa-solid fa-ruler"></i>
                                             <span class="nav-text">Kích thước</span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a th:href="@{/acvstore/chat-lieu}" class="nav-link text-white">
+                                        <a th:href="@{/acvstore/chat-lieu}" class="nav-link text-black">
                                             <i class="fa-solid fa-swatchbook"></i>
                                             <span class="nav-text">Chất liệu</span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a th:href="@{/acvstore/kieu-dang}" class="nav-link text-white">
+                                        <a th:href="@{/acvstore/kieu-dang}" class="nav-link text-black">
                                             <i class="fa-solid fa-vector-square"></i>
                                             <span class="nav-text">Kiểu dáng</span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a th:href="@{/acvstore/co-ao}" class="nav-link text-white">
+                                        <a th:href="@{/acvstore/co-ao}" class="nav-link text-black">
                                             <i class="fa-solid fa-tshirt"></i>
                                             <span class="nav-text">Cổ áo</span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a th:href="@{/acvstore/tay-ao}" class="nav-link text-white">
+                                        <a th:href="@{/acvstore/tay-ao}" class="nav-link text-black">
                                             <i class="fa-solid fa-ruler-horizontal"></i>
                                             <span class="nav-text">Tay áo</span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a th:href="@{/acvstore/danh-muc}" class="nav-link text-white">
+                                        <a th:href="@{/acvstore/danh-muc}" class="nav-link text-black">
                                             <i class="fa-solid fa-folder-tree"></i>
                                             <span class="nav-text">Danh mục</span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a th:href="@{/acvstore/thuong-hieu}" class="nav-link text-white">
+                                        <a th:href="@{/acvstore/thuong-hieu}" class="nav-link text-black">
                                             <i class="fa-solid fa-certificate"></i>
                                             <span class="nav-text">Thương hiệu</span>
                                         </a>
@@ -115,20 +111,20 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white d-flex justify-content-between align-items-center collapsed" data-bs-toggle="collapse" href="#giamgiaSubmenu" role="button" aria-expanded="false" aria-controls="giamgiaSubmenu">
+                <a class="nav-link text-black d-flex justify-content-between align-items-center collapsed" data-bs-toggle="collapse" href="#giamgiaSubmenu" role="button" aria-expanded="false" aria-controls="giamgiaSubmenu">
                     <span class="d-flex align-items-center"><i class="fa-solid fa-ticket"></i><span class="nav-text">Giảm giá</span></span>
                     <i class="fa-solid fa-chevron-down toggle-icon"></i>
                 </a>
                 <div class="collapse" id="giamgiaSubmenu">
                     <ul class="nav flex-column ms-3">
                         <li class="nav-item">
-                            <a th:href="@{/acvstore/phieu-giam-gia}" class="nav-link text-white">
+                            <a th:href="@{/acvstore/phieu-giam-gia}" class="nav-link text-black">
                                 <i class="fa-solid fa-ticket-alt"></i>
                                 <span class="nav-text">Phiếu giảm giá</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a th:href="@{/acvstore/chien-dich-giam-gia}" class="nav-link text-white">
+                            <a th:href="@{/acvstore/chien-dich-giam-gia}" class="nav-link text-black">
                                 <i class="fa-solid fa-percent"></i>
                                 <span class="nav-text">Đợt Giảm Giá</span>
                             </a>
@@ -137,13 +133,13 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a th:href="@{/acvstore/customers}" class="nav-link text-white d-flex align-items-center">
+                <a th:href="@{/acvstore/customers}" class="nav-link text-black d-flex align-items-center">
                     <i class="fa-solid fa-users"></i>
                     <span class="nav-text">Khách hàng</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a th:href="@{/acvstore/employees}" class="nav-link text-white d-flex align-items-center">
+                <a th:href="@{/acvstore/employees}" class="nav-link text-black d-flex align-items-center">
                     <i class="fa-solid fa-user-tie"></i>
                     <span class="nav-text">Nhân sự</span>
                 </a>
