--- a/src/main/resources/templates/WebQuanLy/ban-hang.html
+++ b/src/main/resources/templates/WebQuanLy/ban-hang.html
@@ -576,15 +576,19 @@
       gap: 1rem;
       margin-bottom: 2rem;
     }
+
   </style>
 </head>
 <body>
 <div class="d-flex">
   <div th:replace="~{fragments/sidebar :: sidebar}" class="fixed top-0 left-0 h-full bg-gray-800 text-white w-64"></div>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm px-4 justify-content-between fixed top-0 right-0 w-[calc(100%-256px)]">
-    <div th:replace="~{fragments/account_dropdown :: accountDropdown(user=${user})}"></div>
+  <nav class="navbar custom-navbar navbar-expand-lg navbar-light bg-white shadow-sm px-4 fixed top-0 right-0 w-[calc(100%-256px)] d-flex">
+    <!-- Các phần tử khác bên trái (nếu có) -->
+
+    <div class="ms-auto" th:replace="~{fragments/account_dropdown :: accountDropdown(user=${user})}"></div>
   </nav>
+
 
   <!-- Nội dung chính -->
   <div class="content mt-16" id="mainContent">
