--- a/src/main/resources/templates/WebQuanLy/thong-ke.html
+++ b/src/main/resources/templates/WebQuanLy/thong-ke.html
@@ -179,7 +179,7 @@
       <div class="col-md-6">
         <!-- Trạng thái đơn hàng tháng này -->
         <div class="card-box">
-          <h5 class="fw-bold mb-3">Trạng thái đơn hàng tháng này 😊</h5>
+          <h5 class="fw-bold mb-3">Trạng thái đơn hàng </h5>
           <div class="row">
             <div class="col-md-6">
               <ul class="status-list">
